build/hadra-build-tool/src/test/resources/net/hl/test/compiler/success/testCompilerSuccess0007.hl
var h=m(3);
fun m(int x)-> x+1;