build/hadra-build-tool/src/test/resources/net/hl/test/compiler/fail/testCompilerFail0009.hl
var h=m();
fun m()-> h;